# nix-diff

./: README.md  nix-diff.cabal
app/: Main.hs
golden-tests/: run-test.sh
golden-tests/helpers/: run-diff.sh
src/: Diff.hs
src/Diff/: Types.hs
src/Render/: HumanReadable.hs
test/: Main.hs
