name:                nix-diff
version:             1.0.18
synopsis:            Explain why two Nix derivations differ
description:         This package provides a @nix-diff@ executable which
                     explains why two Nix derivations (i.e. @*.drv@ files)
                     differ
homepage:            https://github.com/Gabriella439/nix-diff
license:             BSD3
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          GenuineGabriella@gmail.com
copyright:           2017 Gabriella Gonzalez
category:            System
build-type:          Simple
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.8.3
cabal-version:       >= 1.10
extra-source-files:  README.md
                     CHANGELOG.md

library 
  exposed-modules:
    Diff
    Diff.Types
    Render.HumanReadable
  build-depends:       base                 >= 4.9      && < 5
                     , attoparsec           >= 0.13     && < 0.15
                     , aeson
                     , bytestring           >= 0.9      && < 0.12
                     , containers           >= 0.5      && < 0.7
                     , directory                           < 1.4
                     , mtl                  >= 2.2      && < 2.3
                     , nix-derivation       >= 1.1      && < 1.2
                     , patience             >= 0.3      && < 0.4
                     , text                 >= 1.2      && < 1.3
                     , vector               >= 0.12     && < 0.13
                     , process                             < 1.7
                     , filepath                            < 1.5
                     , QuickCheck
                     , quickcheck-instances
                     , generic-arbitrary
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  
executable nix-diff
  main-is:             Main.hs
 
  build-depends:       base                 >= 4.9      && < 5
                     , nix-diff
                     , aeson
                     , bytestring           >= 0.9      && < 0.12
                     , optparse-applicative >= 0.14.0.0 && < 0.17
                     , text                 >= 1.2      && < 1.3
                     , unix                                < 2.8
                     , containers           >= 0.5      && < 0.7
                     , mtl                  >= 2.2      && < 2.3
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite json-test
  main-is:             Main.hs

  type:                exitcode-stdio-1.0

  build-depends:       base                 >= 4.9      && < 5
                     , nix-diff
                     , aeson
                     , QuickCheck

  hs-source-dirs:      test

  default-language:    Haskell2010
  ghc-options:         -Wall